--- a/api-reference/sql-api/get-query-results.mdx
+++ b/api-reference/sql-api/get-query-results.mdx
@@ -1,4 +1,4 @@
 ---
 title: "Get Query Results (Alpha)"
-openapi: "get /execution/{execution_id}/result"
+openapi: "get /execution/{execution_id}/results"
 ---
