Add Dual-Chain flow

--- a/core-concepts/dual-chain.mdx
+++ b/core-concepts/dual-chain.mdx
@@ -3,6 +3,7 @@ title: 'Dual-Chain'
 ---
 
 ### Consensus Layer + Execution Layer
+![death spiral](../images/dual-chain-1.png)
 
 Chainbase introduces an innovative dual-chain architecture that enhances the programmability and composability of cross-chain data, supporting high throughput, low latency, and finality. This architecture achieves higher network security through a dual staking model.
 
