--- a/introduction/networks/developers.mdx
+++ b/introduction/networks/developers.mdx
@@ -6,7 +6,7 @@ title: 'Developers'
 
 Developers are both the demand and supply side of the network's data. Developers build manuscripts and publish them to the network to earn rewards, and at the same time, when they build Dapps, they query network data, becoming users of the network.
 
-### Local Development
+### Local Development(Coming soon)
 
 Developers use the `chainbase-sdk` to build manuscripts locally. The SDK provides a comprehensive set of tools and libraries that simplify the process of data transformation and querying.
 
