format supported-networks.mdx

--- a/platform/supported-networks/supported-networks.mdx
+++ b/platform/supported-networks/supported-networks.mdx
@@ -6,21 +6,21 @@ We support the following networks in real-time across multiple data types. More 
 
 
 
-| **Ecosystem**       | **Blockchains Supported**        | **Node RPC** | **Raw** | **Decoded** | **Abstracted** | **Web3API** |
-|---------------------|----------------------------------|--------------|---------|-------------|----------------|-----------|
-| **EVM**             | Ethereum                         | ✔            | ✔       | ✔           | ✔              | ✔         |
-|                     | Binance Smart Chain (BSC)        | ✔            | ✔       | ✔           | ✔              | ✔         |
-|                     | Polygon                          | ✔            | ✔       | ✔           | ✔              | ✔         |
-|                     | Avalanche (C-Chain)              | ✔            | ✔       | ✔           | ✔              | ✔         |
-|                     | Fantom                           | ✔            | ✔       | ✔           |                |           |
-| **EVM Layer 2**     | Arbitrum                         | ✔            | ✔       | ✔           | ✔              | ✔         |
-|                     | Optimism                         | ✔            | ✔       | ✔           | ✔              | ✔         |
-|                     | Base                             | ✔            | ✔       | ✔           | ✔              | ✔         |
-|                     | Blast                            | ✔            | ✔       | ✔           | ✔              |           |
-|                     | ZkSync                           | ✔            | ✔       | ✔           | ✔              | ✔         |
-| **Non EVM**         | Bitcoin                          |              |         |             | ✔              |           |
-|                     | Sui                              | ✔            |         |             | ✔              |           |
-|                     | Ton                              | ✔            | ✔       |             |                |           |
-|                     | Tron                             | ✔            | ✔       |             |                |           |
-|                     | Merlin                           | ✔            | ✔       |             |                | ✔         |
-|                     | *Solana\**                       |              | \*      | \*          | \*             | \*        |
+| **Ecosystem**       | **Blockchains Supported**        | **Node RPC** | **Raw** | **Decoded** | **Abstracted** | **Web3 API** |
+|---------------------|----------------------------------|--------------|---------|-------------|----------------|--------------|
+| **EVM**             | Ethereum                         | ✔            | ✔       | ✔           | ✔              | ✔            |
+|                     | Binance Smart Chain (BSC)        | ✔            | ✔       | ✔           | ✔              | ✔            |
+|                     | Polygon                          | ✔            | ✔       | ✔           | ✔              | ✔            |
+|                     | Avalanche (C-Chain)              | ✔            | ✔       | ✔           | ✔              | ✔            |
+|                     | Fantom                           | ✔            | ✔       | ✔           |                |              |
+|                     | Arbitrum                         | ✔            | ✔       | ✔           | ✔              | ✔            |
+|                     | Optimism                         | ✔            | ✔       | ✔           | ✔              | ✔            |
+|                     | Base                             | ✔            | ✔       | ✔           | ✔              | ✔            |
+|                     | Blast                            | ✔            | ✔       | ✔           | ✔              |              |
+|                     | ZkSync                           | ✔            | ✔       | ✔           | ✔              | ✔            |
+|                     | Merlin                           | ✔            | ✔       |             |                | ✔            |
+| **Non EVM**         | Bitcoin                          |              | \*      |             | ✔              |              |
+|                     | Sui                              | ✔            |         |             | ✔              |              |
+|                     | Ton                              | ✔            | ✔       |             |                |              |
+|                     | Tron                             | ✔            | ✔       |             |                |              |
+|                     | *Solana\**                       |              | \*      | \*          | \*             | \*           |
