--- a/node/operator.mdx
+++ b/node/operator.mdx
@@ -1,5 +1,21 @@
 ---
-title: 'Run a Operator'
+title: 'Run a Operator(Not released to mainnet yet)'
 ---
 
-## Coming soon
+## EigenLayer Registration
+
+Before registering as an AVS, ensure that the operator has already registered with EigenLayer. 
+For reference, see [here](https://docs.eigenlayer.xyz/eigenlayer/operator-guides/operator-installation)
+
+## Chainbase AVS Contract Registration
+
+You will need an `operator.yml` file to perform this registration. This file is created when you register as an operator using the EigenLayer CLI. You should use the same file created during that process and do not need to modify it.
+
+1. download the latest chainbase-avs-cli release from [here](https://github.com/chainbase-labs/chainbase-avs-contracts/releases)
+
+
+2. Run the following command to register as an operator:
+
+```
+chainbase-avs-cli register --config-file ~/path/to/operator.yaml
+``` 
