<ADD> testnet docs

--- a/developers/open_apis.mdx
+++ b/developers/open_apis.mdx
@@ -2,4 +2,8 @@
 title: 'Open APIs'
 ---
 
-## Coming soon
+## Public Available RPC Endpoints
+### Testnet
+| **Address** | **Maintainer** |
+|-------------------|--------------------------|
+| https://testnet.s.chainbase.com | Altlayer|
