Update testnet overview

--- a/developers/testnet.mdx
+++ b/developers/testnet.mdx
@@ -3,7 +3,7 @@ title: 'Testnet'
 ---
 
 ## Overview
-Chainbase Network testnet is an advanced OP stack-based Layer 2 solution, leveraging the power of AVS technology. In Chainbase Network, L2 transaction data is written to OP Plasma for data availability, rather than using Ethereum calldata. This approach ensures enhanced efficiency, scalability, and security for decentralized applications.
+Chainbase Network testnet is an advanced OP stack-based Layer 2 solution. In Chainbase Network, L2 transaction data is written to OP Plasma for data availability, rather than using Ethereum calldata. This approach ensures enhanced efficiency, scalability, and security for decentralized applications.
 
 ## Info
 | **Parameter** | Value |
