Update testnet explorer

--- a/developers/testnet.mdx
+++ b/developers/testnet.mdx
@@ -13,7 +13,7 @@ Chainbase Network testnet is an advanced OP stack-based Layer 2 solution. In Cha
 | **Settlement Layer** | Sepolia Testnet       |
 | **Chain ID**      | 2233                     |
 | **Currency Symbol**      | ETH               |
-| **Explorer**      | https://2233.testnet.routescan.io/               |
+| **Explorer**      | https://testnet.explorer.chainbase.com/  |
 | **Bridge**      | https://testnet.bridge.chainbase.com/               |
 
 ## Guide
