fix spelling overview.mdx

--- a/platform/overview.mdx
+++ b/platform/overview.mdx
@@ -8,7 +8,7 @@ Welcome to Chainbase Data Platform docs. All-in-one web3 data infrastructure for
 
 Chainbase Data Platform is an all-in-one data infrastructure for Web3 that allows you to index, transform, and utilize large-scale on-chain data. It is a platform that provides a suite of tools and services to help you build, manage, and scale your Web3 applications.
 
-By leveraging enriched on-chain data and streaming computing technologies accross one data infrastructure, Chainbase Data Platform automates the indexing and querying of blockchain data, enabling developers to accomplish complex data tasks with ease.
+By leveraging enriched on-chain data and streaming computing technologies across one data infrastructure, Chainbase Data Platform automates the indexing and querying of blockchain data, enabling developers to accomplish complex data tasks with ease.
 
 ## Products & Features
 
