ci: add typo checker

--- a/core-concepts/manuscript.mdx
+++ b/core-concepts/manuscript.mdx
@@ -82,7 +82,7 @@ Developers need to define the schema of the result table, including field names,
 The general syntax of the `SELECT` statement is:
 
 ```sql
-select select_list from table_expression [where boolen_expression]
+select select_list from table_expression [where boolean_expression]
 ```
 
 The `table_expression` refers to any data set in Chainbase Network. It could be an existing table, or VALUES clause, the joined results of multiple existing tables, or a subquery. The following would read all rows from `blocks`.
