--- a/platform/supported-networks/supported-networks.mdx
+++ b/platform/supported-networks/supported-networks.mdx
@@ -2,7 +2,7 @@
 title: "Supported Networks"
 ---
 
-We support the following networks in real-time across multiple data types. More chains and types are being onboarded and will comming soon.
+We support the following networks in real-time across multiple data types. More chains and types are being onboarded and will coming soon.
 
 
 
