--- a/platform/usecases/nft-api/get-nft-metadata.mdx
+++ b/platform/usecases/nft-api/get-nft-metadata.mdx
@@ -4,7 +4,7 @@ title: "Get NFT metadata"
 
 The importance of NFT metadata lies in its ability to provide additional information about the NFT such as its name, description, image, and other attributes. This metadata is often used by marketplaces and collectors to display and search for NFTs. Additionally, the metadata can be used to verify the authenticity and ownership of an NFT.
 
-To get NFT metadata, you can use the [Get NFT metadata](/api-reference/web3-api/nft/nft-metadata/get-nft-metadata) function, which returns JSON-formated data that contains the metadata for the NFT.
+To get NFT metadata, you can use the [Get NFT metadata](/api-reference/web3-api/nft/nft-metadata/get-nft-metadata) function, which returns JSON-formatted data that contains the metadata for the NFT.
 
 ## Overview - Tools you need to work with Chainbase
 
