--- a/theia/Resources/Roadmap.mdx
+++ b/theia/Resources/Roadmap.mdx
@@ -2,7 +2,7 @@
 title: 'Roadmap'
 ---
 
-Theia is the next-generation crypto world model that provides foundation knowledge and AI capability for the web3 era. To achieve this goal, the roadmap details the path to more intelligent, secure and transparant Theia model.
+Theia is the next-generation crypto world model that provides foundation knowledge and AI capability for the web3 era. To achieve this goal, the roadmap details the path to more intelligent, secure and transparent Theia model.
 
 ## Phase 1: Theia Demo Online
 
