--- a/theia/TheiaChat/create-task-models.mdx
+++ b/theia/TheiaChat/create-task-models.mdx
@@ -10,7 +10,7 @@ Theia Task Models is constructed using prompt and data engineering. We introduce
 
 Prompt engineering refers to a series of instruction for Theia. It can trigger Theia to wake up specific capability in some field and work as a task model as instructed. The instruction should be clear and the output format can be defined. To build a good task model, we normally tell Theia three important messages: role, hint for reasoning and generation, and goal.
 
-For example, to build a crypto investment adivsor, we can write the prompt including the three messages:
+For example, to build a crypto investment advisor, we can write the prompt including the three messages:
    - **Role:** Theia, you are an investment advisor.
    - **Hint:** Whenever I provide you a whitepaper of a project, please analyze the whitepaper and search the news of this project. 
    - **Goal:** Then generate an investment advisory report.
