<ADD> add co-processor layer architecture docs

--- a/developers/testnet.mdx
+++ b/developers/testnet.mdx
@@ -1,9 +1,9 @@
 ---
-title: 'Testnet'
+title: 'Co-processor Layer Testnet'
 ---
 
 ## Overview
-Chainbase Network testnet is an advanced OP stack-based Layer 2 solution. In Chainbase Network, L2 transaction data is written to OP Plasma for data availability, rather than using Ethereum calldata. This approach ensures enhanced efficiency, scalability, and security for decentralized applications.
+The [Co-processor Layer](/core-concepts/architecture/co_processor_layer) is building a community-driven collaborative layer for data developers, aimed at continuously unlocking and enhancing the value of crypto data. Built on the advanced [OP stack](https://docs.optimism.io/stack/getting-started) architecture and integrated with the innovative [Superchain](https://app.optimism.io/superchain/) ecosystem, it ensures efficient, scalable, and secure data processing and management.
 
 ## Info
 | **Parameter** | Value |
