--- a/node/operator.mdx
+++ b/node/operator.mdx
@@ -9,7 +9,17 @@ For reference, see [here](https://docs.eigenlayer.xyz/eigenlayer/operator-guides
 
 ## Chainbase AVS Contract Registration
 
-You will need an `operator.yml` file to perform this registration. This file is created when you register as an operator using the EigenLayer CLI. You should use the same file created during that process and do not need to modify it.
+You will need an `avs.toml` file to perform this registration. eg.
+
+```yaml
+operator_config_path = "/path/to/operator.yaml"
+keystore_pwd = "your_keystore_password"
+avs_contract_address="0x5E78eFF26480A75E06cCdABe88Eb522D4D8e1C9d"
+avs_dir_contract_address="0x055733000064333CaDDbC92763c58BF0192fFeBf"
+rpc_url="https://rpc.ankr.com/eth_holesky"
+```
+
+The `operator.yaml` file is created when you register as an operator using the EigenLayer CLI. You should use the same file created during that process and do not need to modify it.
 
 1. download the latest chainbase-avs-cli release from [here](https://github.com/chainbase-labs/chainbase-avs-contracts/releases)
 
@@ -17,5 +27,5 @@ You will need an `operator.yml` file to perform this registration. This file is 
 2. Run the following command to register as an operator:
 
 ```
-chainbase-avs-cli register --config-file ~/path/to/operator.yaml
+chainbase-avs-cli register --config  ~/path/to/avs.toml
 ``` 
