--- a/node/operator.mdx
+++ b/node/operator.mdx
@@ -29,3 +29,9 @@ The `operator.yaml` file is created when you register as an operator using the E
 ```
 chainbase-avs-cli register --config  ~/path/to/avs.toml
 ``` 
+
+## Run AVS
+
+```bash
+chainbase-avs-cli run
+```
