--- a/catalog/Ton/Overview.mdx
+++ b/catalog/Ton/Overview.mdx
@@ -14,6 +14,6 @@ TON (The Open Network) is a decentralized blockchain platform initially develope
 
 <CardGroup cols={3}>
     <Card title="Raw" icon="binary" href="./Raw/blocks">
-        TON Raw, unprocessed data on the TON chain, including blocks, transactions, and logs.
+        TON Raw, unprocessed data on the TON chain, including blocks, transactions, and messages.
     </Card>
 </CardGroup>
