--- a/catalog/Ton/Raw/sub_shards.mdx
+++ b/catalog/Ton/Raw/sub_shards.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'ton_v2.subshards'
+title: 'ton.subshards'
 ---
 
 ### Table Description
@@ -8,7 +8,7 @@ Masterchain block stores only the reference to lastest shard blocks of workchain
 
 <div>
     <iframe
-        src="https://doc-embed-app.chainbasehq.com/columns/ton_v2.subshards"
+        src="https://doc-embed-app.chainbasehq.com/columns/ton.subshards"
         width="100%"
         height="300px"
         frameBorder="0"
@@ -20,7 +20,7 @@ Masterchain block stores only the reference to lastest shard blocks of workchain
 
 <div>
     <iframe
-        src="https://doc-embed-app.chainbasehq.com/data/ton_v2.subshards"
+        src="https://doc-embed-app.chainbasehq.com/data/ton.subshards"
         width="100%"
         height="300px"
         frameBorder="0"
