fix[ton-doc]:overview href

--- a/catalog/Ton/Overview.mdx
+++ b/catalog/Ton/Overview.mdx
@@ -13,7 +13,7 @@ TON (The Open Network) is a decentralized blockchain platform initially develope
 ### Data catalog
 
 <CardGroup cols={3}>
-    <Card title="Raw" icon="binary" href="./Raw/blocks">
+    <Card title="Raw" icon="binary" href="./Raw/master_blocks">
         TON Raw, unprocessed data on the TON chain, including blocks, transactions, and messages.
     </Card>
 </CardGroup>
