fix missing icons

--- a/platform/features/api/web3-api.mdx
+++ b/platform/features/api/web3-api.mdx
@@ -115,35 +115,35 @@ We will continue to add support for new blockchains for Web3 API. If there is a 
 >
   {[
     {
-      link: "https://chainbase.com/assets/rpcService/multiChain/Ethereum.png",
+      link: "https://platform.chainbase.com/assets/rpcService/multiChain/Ethereum.png",
       name: "Ethereum",
     },
     {
-      link: "https://chainbase.com/assets/rpcService/multiChain/Polygon.png",
+      link: "https://platform.chainbase.com/assets/rpcService/multiChain/Polygon.png",
       name: "Polygon",
     },
     {
-      link: "https://chainbase.com/assets/rpcService/multiChain/BSC.png",
+      link: "https://platform.chainbase.com/assets/rpcService/multiChain/BSC.png",
       name: "BNB Chain",
     },
     {
-      link: "https://chainbase.com/assets/rpcService/multiChain/Fantom.png",
+      link: "https://platform.chainbase.com/assets/rpcService/multiChain/Fantom.png",
       name: "Fantom",
     },
     {
-      link: "https://chainbase.com/assets/rpcService/multiChain/Avalanche.png",
+      link: "https://platform.chainbase.com/assets/rpcService/multiChain/Avalanche.png",
       name: "Avalanche",
     },
     {
-      link: "https://chainbase.com/assets/rpcService/multiChain/Arbitrum.png",
+      link: "https://platform.chainbase.com/assets/rpcService/multiChain/Arbitrum.png",
       name: "Arbitrum",
     },
     {
-      link: "https://chainbase.com/assets/rpcService/multiChain/Optimism.png",
+      link: "https://platform.chainbase.com/assets/rpcService/multiChain/Optimism.png",
       name: "Optimism",
     },
     {
-      link: "https://chainbase.com/assets/rpcService/multiChain/zkSync.png",
+      link: "https://platform.chainbase.com/assets/rpcService/multiChain/zkSync.png",
       name: "zkSync",
     },
   ].map((v) => (
