--- a/theia/TheiaChat/overview.mdx
+++ b/theia/TheiaChat/overview.mdx
@@ -2,9 +2,9 @@
 title: 'Overview'
 ---
 
-TheiaChat is an AI agent built by Chainabse Labs based on Theia, the first crypto world model. TheiaChat provides an interface through which non-expert users can interact with the Chainbase Network, opening up the ability to obtain on-chain data intelligence to everyone for the first time. 
+TheiaChat is an AI agent built by Chainbase Labs based on Theia, the first crypto world model. TheiaChat provides an interface through which non-expert users can interact with the Chainbase Network, opening up the ability to obtain on-chain data intelligence to everyone for the first time. 
 
-Users can enhance the Chainabse Network when interacting with TheiaChat and benefit from it. This mainly involves two types of users:
+Users can enhance the Chainbase Network when interacting with TheiaChat and benefit from it. This mainly involves two types of users:
 
 1. **Non-Expert Users:** people without blockchain knowledge and skills, such as blockchain beginners. They can enhance the Chainbase Network by having conversations with TheiaChat and providing feedback on the results of the conversations, and the network rewards serious and honest users.
 2. **Expert Users:** People with blockchain knowledge and skills, such as professional traders and security experts. They can enhance the Chainbase Network by building Theia Task Models in TheiaChat, and the network will reward Task Model builders with high adoption.
