--- a/node/operator.mdx
+++ b/node/operator.mdx
@@ -63,6 +63,11 @@ MAIN_SERVICE_IMAGE=repository.chainbase.com/network/chainbase-node:<latest versi
 chmod +x ./chainbase-avs.sh
 ```
 
+6. update `holesky/prometheus.yml`'s `${YOUR_OPERATOR_NAME}`
+
+replace this with your Operator name you want to be identified by, it helps us route alerts and metrics to your notification channels easily
+
+
 ## Register Chainbase AVS
 
 1. Run the following command to register as an operator:
